# rofi-randr

./: Cargo.toml  README.md
src/: err.rs  icon.rs  main.rs  rofi.rs
src/action/: mod.rs  mode.rs  position.rs  rate.rs  resolution.rs  rotate.rs
src/backend/: err.rs  libxrandr.rs  mod.rs  sway.rs  xrandr_cli.rs
src/dpy_backend/: err.rs  libxrandr.rs  mod.rs  sway.rs  xrandr_cli.rs
